{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 135,
  "lineage": "883c519d-7aef-d2ab-6f98-ed7b772c1b74",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/networkInterfaces/testvmnet",
            "internal_domain_name_suffix": "g32hlfmwzpeurlvbnmupm3vxke.tx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "test-ip",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/publicIPAddresses/test_server_ip",
                "subnet_id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/virtualNetworks/testnet/subnets/testtsub"
              }
            ],
            "location": "southindia",
            "mac_address": "00-22-48-D5-FF-4D",
            "name": "testvmnet",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "test_server01",
            "virtual_machine_id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Compute/virtualMachines/Test-server01"
          },
          "dependencies": [
            "azurerm_public_ip.test02",
            "azurerm_resource_group.test02",
            "azurerm_subnet.test02",
            "azurerm_virtual_network.test02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/networkSecurityGroups/test_security",
            "location": "southindia",
            "name": "test_security",
            "resource_group_name": "test_server01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.test02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/networkSecurityGroups/test_security/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "test_security",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "test_server01",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test02",
            "azurerm_resource_group.test02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/publicIPAddresses/test_server_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.235.47.38",
            "ip_version": "IPv4",
            "location": "southindia",
            "name": "test_server_ip",
            "resource_group_name": "test_server01",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.test02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/virtualNetworks/testnet/subnets/testtsub",
            "name": "testtsub",
            "resource_group_name": "test_server01",
            "virtual_network_name": "testnet"
          },
          "dependencies": [
            "azurerm_resource_group.test02",
            "azurerm_virtual_network.test02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "95757837-cb96-48c9-aea1-6b28f676b754",
            "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/virtualNetworks/testnet",
            "location": "southindia",
            "name": "testnet",
            "resource_group_name": "test_server01",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/f10efc45-f81f-425f-9643-1f68e2bb530f/resourceGroups/test_server01/providers/Microsoft.Network/virtualNetworks/testnet/subnets/testtsub",
                "name": "testtsub"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.test02"
          ]
        }
      ]
    }
  ]
}